tests/should_fail/type_string_gt_comparison.nv
module main

// SHOULD FAIL: greater-than comparison on strings (no __gt__ for String)
fn test() -> Bool {
    return "abc" > "def"
}
println(test())
